apply plugin: 'java'
apply plugin: 'eclipse'

buildscript {
  repositories { jcenter() }
  dependencies {
    classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.3'
  }
}

apply plugin: 'com.github.johnrengelman.shadow'

sourceCompatibility = 1.8
version = '0.9'
jar {
    manifest {
        attributes 'Implementation-Title': 'SlackWatchdog',
                   'Implementation-Version': version,
                   'Main-Class': 'ch.apptiva.watchdog.Main'
    }
}

repositories {
    maven {
        url "https://jitpack.io"
    }
    mavenCentral()
}

dependencies {
    compile 'com.github.Ullink:simple-slack-api:0.5.1'
    runtime 'com.github.Ullink:simple-slack-api:0.5.1'
    testCompile group: 'junit', name: 'junit', version: '4.+'
}

test {
    systemProperties 'property': 'value'
}

